--- a/style.css
+++ b/style.css
@@ -23,14 +23,21 @@ p{
 	font-size: 30px;
 }
 
-.slider::-webkit-slider-thumb {
+.slider {
   -webkit-appearance: none;
-  appearance: none;
-  background-color: black;
-  width: 85%;
-  height: 24px;
-  border: 0;
+  width: 25%;
+  height: 10px;
+  border-radius: 5px;
   cursor: pointer;
+  background-color: grey;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover{
+	opacity:1;
 }
 
 .container {
@@ -43,6 +50,7 @@ p{
   margin-top: 180px;
   text-align: center;
   box-shadow: 5px 5px 5px 5px #dbb4ad;
+  opacity: 1;
 }
 
 #images{
